# BaseCpp

./: .gitignore  README.md
HW1/: CMakeLists.txt  program.cpp
HW2/: CMakeLists.txt
HW2/include/: head.h
HW2/src/: program.cpp
HW3/: CMakeLists.txt
HW3/include/: head.h
HW3/src/: program.cpp
MemoryManagement/HW1/: CMakeLists.txt
MemoryManagement/HW1/include/: categorizer.hpp
MemoryManagement/HW1/src/: categorizer.cpp
MemoryManagement/HW2/: CMakeLists.txt
MemoryManagement/HW2/include/: HW2.hpp
MemoryManagement/HW2/src/: HW2.cpp
MemoryManagement/HW3/: CMakeLists.txt
MemoryManagement/HW3/include/: HW3.hpp
MemoryManagement/HW3/src/: HW3.cpp
Pattern/: CMakeLists.txt
Pattern/include/: head.h
Pattern/src/: program.cpp
categorizer/: CMakeLists.txt
categorizer/include/: categorizer.hpp
categorizer/src/: categorizer.cpp
